fix: make tooltip do not overflow with its parent code

--- a/src/shiki.css
+++ b/src/shiki.css
@@ -70,7 +70,7 @@ pre.twoslash:hover data-lsp {
 pre.twoslash data-lsp:hover::before {
 	content: attr(lsp);
 	position: absolute;
-	transform: translate(0, 1rem);
+	transform: translate(0, 1.75rem);
 
 	background-color: #3f3f3f;
 	color: #fff;
